Done with forms

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
 <h1>Aloha Recipe Book</h1>
+<a href="/recipes/add">Add The Goodness</a>
+<a href="/author/add">Who is it?</a>
 
 <ul>
     {% for foo in recipes %}
