--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,12 @@
 <h1>Aloha Recipe Book</h1>
+<h2>Recipes Made with Aloha</h2>
+<a href="/login/">Login</a>
+<br>
+<a href="/logout/">Logout</a>
+<br>
+<br>
 <a href="/recipes/add">Add The Goodness</a>
+<br>
 <a href="/author/add">Who is it?</a>
 
 <ul>
