--- a/templates/generic_form.html
+++ b/templates/generic_form.html
@@ -1,5 +1,7 @@
+<h2>Please fill out the form below⬇️</h2>
+<br>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Success">
+    <input type="submit" value="Submit">
 </form>
