--- a/templates/recipes_detail.html
+++ b/templates/recipes_detail.html
@@ -1,7 +1,12 @@
-<h2>These are the recipes.</h2>
+<h2>Recipe Page </h2>
 
     by <a href="/author/{{ recipes.author.id }}/">{{ recipes.author.name }}</a></h3>
-    <h2>{{ recipes.title }}</h2>
-    <h2>{{ recipes.description }}</h2>
-    <h2>{{ recipes.time_required}}</h2>
-    <h2>{{ recipes.instructions }}</h2>
+    <h2>Title:{{ recipes.title }}</h2>
+    <h2>Description:{{ recipes.description }}</h2>
+    <h2>Time to make:{{ recipes.time_required}}</h2>
+    <h2>Instructions:{{ recipes.instructions }}</h2>
+
+    <a href="/">
+        <h4>HomePage</h4>
+    </a>
+    
