--- a/templates/author_detail.html
+++ b/templates/author_detail.html
@@ -1,8 +1,17 @@
 <p>{{ author }}</p>
-
 <p>{{ author.bio }}</p>
+<hr>
+
 <ul>
+{% if recipes %}
+<h1>My Recipes</h1>
     {% for recipe in recipes %}
     <li><a href="/recipes/{{ recipe.author.id }}">{{ recipe.title }}</a></li>
     {% endfor %}
 </ul>
+{% else %}
+<h3> Author does not have a recipe </h3>
+{% endif %}
+<a href="/">
+    <h4>Home Page</h4>
+</a>
